<resources>
    <string name="app_name">IBM Hackathon Squard B</string>

    <!-- History-->
    <string name="week_button">1 WEEK</string>
    <string name="month_button">1 MONTH</string>
    <string name="range_button">RANGE</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search">SEARCH</string>
    <string name="select_account">Select Account</string>

    <!-- Search Result-->
    <string name="got_to_home"> GO TO HOME</string>


    <!-- login and user dash board -->

    <string name="login">Login</string>
    <string name="hint_pin">Enter PIN</string>
    <string name="hint_UserID">Enter User ID</string>
    <string name="welcome">Welcome</string>
    <string name="good_morning">Good Morning</string>
    <string name="umbrella">Please take Your Umbrella</string>
    <string name="make_transfer">MAKE A TRANSFER</string>
    <string name="transfer">TRANSFER</string>
    <string name="history">HISTORY</string>

    <!-- Transaction Completion -->
    <string name="source_account">Source Account</string>
    <string name="destination_account">Destination Account</string>
    <string name="sending_amount">Sending Amount</string>
    <string name="receiving_amount">Receiving Amount</string>
    <string name="reference_no">Reference No.</string>
    <string name="make_another_transfer">MAKE ANOTHER TRANSFER</string>
    <string name="go_to_home">GO TO HOME</string>
    <string name="share_details">SHARE DETAILS</string>
    <string name="share_using">Share Using</string>
</resources>
