<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/account_main_container"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_item_blue"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/select_account"
                android:textStyle="bold"/>

            <RelativeLayout
                android:id="@+id/account_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_account_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textStyle="bold"/>

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"/>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_type_container"
            android:layout_below="@+id/account_main_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/btn_week"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/week_button"/>

            <Button
                android:id="@+id/btn_month"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button"
                android:text="@string/month_button"/>

            <Button
                android:id="@+id/btn_range"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button"
                android:text="@string/range_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/btn_type_container"
            android:id="@+id/range_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/edt_from"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/date_border"
                android:hint="@string/from"
                android:inputType="date"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/edt_to"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/date_border"
                android:hint="@string/to"
                android:inputType="date"
                android:padding="10dp"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_search"
            android:layout_below="@+id/range_container"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="150dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button"
            android:text="@string/search"/>


        <LinearLayout
            android:layout_below="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">
            <Button
                android:id="@+id/btn_transfer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/transfer"
                android:background="@drawable/button"
                android:onClick="doTransfer"/>
            <Button
                android:layout_marginLeft="10dp"
                android:id="@+id/btn_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:text="@string/history"
                android:onClick="history"/>
        </LinearLayout>

    </RelativeLayout>

    <ListView
        android:id="@+id/lv_accounts"
        android:layout_below="@+id/account_main_container"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
    </ListView>


</FrameLayout>