<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin_size_8"
    tools:context=".completion.CompletionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/transaction_account_layout_size"
            android:background="@drawable/bg_item_blue"
            android:orientation="vertical"
            android:padding="@dimen/layout_margin_size_8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source_account"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_mlarge" />

            <TextView
                android:id="@+id/tv_source_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="My Saving Account (123-456-789)"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_xlarge" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/transaction_account_layout_size"
            android:layout_marginTop="@dimen/layout_margin_size_8"
            android:background="@drawable/bg_item_blue"
            android:orientation="vertical"
            android:padding="@dimen/layout_margin_size_8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destination_account"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_mlarge" />

            <TextView
                android:id="@+id/tv_destination_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Saving Account (123-456-789)"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_xlarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/transaction_account_layout_size"
            android:layout_marginTop="@dimen/layout_margin_size_8"
            android:background="@drawable/bg_item_blue"
            android:orientation="vertical"
            android:padding="@dimen/layout_margin_size_8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sending_amount"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_mlarge" />

            <TextView
                android:id="@+id/tv_sending_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SGD 1000.0"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_xlarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/transaction_account_layout_size"
            android:layout_marginTop="@dimen/layout_margin_size_8"
            android:background="@drawable/bg_item_blue"
            android:orientation="vertical"
            android:padding="@dimen/layout_margin_size_8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receiving_amount"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_mlarge" />

            <TextView
                android:id="@+id/tv_receiving_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="INR 50780.00"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_xlarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/transaction_account_layout_size"
            android:layout_marginTop="@dimen/layout_margin_size_8"
            android:background="@drawable/bg_item_blue"
            android:orientation="vertical"
            android:padding="@dimen/layout_margin_size_8">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reference_no"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_mlarge" />

            <TextView
                android:id="@+id/tv_reference_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="REF2019ABC"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_xlarge" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_navigation_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_make_another_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_size_8"
            android:background="@drawable/button"
            android:text="@string/make_another_transfer" />

        <Button
            android:id="@+id/btn_go_to_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_size_8"
            android:background="@drawable/button"
            android:text="@string/go_to_home" />

        <Button
            android:id="@+id/btn_share_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_size_8"
            android:background="@drawable/button"
            android:text="@string/share_details" />
    </LinearLayout>


</RelativeLayout>